fix: remove unused deps

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,3 +18,4 @@ repos:
     hooks:
       - id: uv-lock
       - id: uv-export
+        args: ["--no-dev", "--frozen", "--output-file=requirements.txt"]
