--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ dependencies = [
     "httpx>=0.28.1",
     "numpy>=2.2.4",
     "onnxruntime>=1.21.0",
+    "opencv-python-headless>=4.11.0.86",
     "pycryptodome>=3.22.0",
     "pydantic>=2.11.3",
-    "ultralytics>=8.3.23",
     "uvicorn>=0.34.2",
 ]
 
