--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11.3"
 dependencies = [
     "ddddocr>=1.5.6",
-    "fastapi[standard]>=0.115.12",
+    "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "numpy>=2.2.4",
