feat: migrate to new captcha

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
+    "imagehash>=4.3.2",
     "numpy>=2.2.4",
     "onnxruntime>=1.21.0",
     "opencv-python-headless>=4.11.0.86",
@@ -24,6 +25,7 @@ dev = [
     "isort>=6.0.1",
     "matplotlib>=3.10.1",
     "pre-commit>=4.2.0",
+    "rich>=14.2.0",
     "ruff>=0.11.6",
     "scikit-learn>=1.6.1",
     "tqdm>=4.67.1",
