--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,12 @@ repos:
       - id: ruff
       # Run the formatter.
       - id: ruff-format
-  - repo: https://github.com/pycqa/isort
-    rev: 6.0.1
-    hooks:
-      - id: isort
-        name: isort (python)
   - repo: https://github.com/astral-sh/uv-pre-commit
     # uv version.
-    rev: 0.6.14
+    rev: 0.9.21
     hooks:
       - id: uv-lock
       - id: uv-export
         args: ["--no-dev", "--frozen", "--output-file=requirements.txt"]
+      - id: uv-export
+        args: ["--only-dev", "--frozen", "--output-file=requirements-dev.txt"]
