--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "icp-query"
 version = "0.1.0"
-description = "Add your description here"
+description = "ICP备案信息查询服务 - 基于FastAPI的自动化查询工具"
 readme = "README.md"
 requires-python = ">=3.11.3"
+license = {text = "MIT"}
 dependencies = [
     "aiosqlite>=0.21.0",
     "ddddocr>=1.5.6",
     "fastapi[standard]>=0.115.12",
-    "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "imagehash>=4.3.2",
     "numpy>=2.2.4",
@@ -20,7 +20,6 @@ dependencies = [
     "python-json-logger>=4.0.0",
     "sqlalchemy[asyncio]>=2.0.44",
     "sqlmodel>=0.0.27",
-    "uvicorn>=0.34.2",
     "verboselogs>=1.7",
 ]
 
